AX: Remove unnecessary TextMarker methods from WebAccessibilityObjectWrapper. https://bugs.webkit.org/show_bug.cgi?id=251849 <rdar://problem/105128584>

Reviewed by Darin Adler and Chris Fleizach.

These two methods should not be exposed through the client interface because they won't work in isolated tree mode. WebCore code should use the corresponding C functions.

* Source/WebCore/accessibility/mac/AXObjectCacheMac.mm:
(WebCore::addTextMarkerFor):
* Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.h:
* Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(-[WebAccessibilityObjectWrapper textMarkerForVisiblePosition:]): Deleted.
(-[WebAccessibilityObjectWrapper textMarkerRangeFromVisiblePositions:endPosition:]): Deleted.

Canonical link: https://commits.webkit.org/260075@main